# all-your-tube

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Pipfile  README.md  gunicorn.conf.py  launch.sh  pyproject.toml  run_docker.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pylint.yml  quality.yml  test.yml
all-you-tube/: main.py
all-you-tube/templates/: index.html
all-you-tube/tests/: test_main.py
all-your-tube/: main.py
all-your-tube/static/css/: log.css
all-your-tube/templates/: log.html
scripts/: format.py
src/all_your_tube/: __init__.py  app.py  log_monitoring.py  queue.py  utils.py  wsgi.py
src/all_your_tube/static/css/: main.css
src/all_your_tube/static/js/: main.js
src/all_your_tube/templates/: index.html  log.html
tests/: test_ui_rendering.py
