[metadata]
name = gaba
version = 1.0
description = README.md
author = Brandon T. Fields
author_email = brandon@cdated.com
summary = Exercises
url = http://www.cdated.com
test-suite = gaba.tests

[entry_points]
console_scripts =
    gaba-template = gaba.template:main

[files]
packages = gaba

[flake8]
ignore = E402
exclude = tests
